fix for puppet-lint messages